[project]
name = "cpdbench"
version = "2.0.0"
description = "Change Point Detection Benchmark - Modern Python Implementation"
authors = [
    { name = "G.J.J. van den Burg", email = "gertjanvandenburg@gmail.com" },
    { name = "C.K.I. Williams" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9.0",
    "scipy",
    "numpy",
    "labella>=0.9.7",
    "termcolor",
    "colorama",
    "networkx",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/Tripudium/CPDBENCH"
Repository = "https://github.com/Tripudium/CPDBENCH"
"Bug Tracker" = "https://github.com/Tripudium/CPDBENCH/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis"]

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = [
    "execs/python/bocpdms",
    "execs/python/rbocpdms"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
analysis = [
    "tabulate>=0.9.0",
    "scipy",
    "numpy", 
    "labella>=0.9.7",
    "termcolor",
    "colorama",
    "networkx",
    "statsmodels",
]

[project.scripts]
cpd-summarize = "analysis.scripts.summarize:main"
cpd-make-table = "analysis.scripts.make_table:main"
cpd-validate = "utils.validate_schema:main"

[tool.uv.sources]
# All dependencies will use the latest compatible versions